src/qt/libqgraphicseffect.bf

extension CQt
{
	[LinkName("QGraphicsDropShadowEffect_new")]
	public static extern void* QGraphicsDropShadowEffect_new();
	[LinkName("QGraphicsDropShadowEffect_new2")]
	public static extern void* QGraphicsDropShadowEffect_new2(void* parent);
	[LinkName("QGraphicsDropShadowEffect_MetaObject")]
	public static extern void* QGraphicsDropShadowEffect_MetaObject(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_Metacast")]
	public static extern void* QGraphicsDropShadowEffect_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsDropShadowEffect_Metacall")]
	public static extern int32 QGraphicsDropShadowEffect_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QGraphicsDropShadowEffect_Tr")]
	public static extern libqt_string QGraphicsDropShadowEffect_Tr(char8[] s);
	[LinkName("QGraphicsDropShadowEffect_BoundingRectFor")]
	public static extern void QGraphicsDropShadowEffect_BoundingRectFor(void* c_this, void* rect);
	[LinkName("QGraphicsDropShadowEffect_Offset")]
	public static extern void QGraphicsDropShadowEffect_Offset(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_XOffset")]
	public static extern double QGraphicsDropShadowEffect_XOffset(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_YOffset")]
	public static extern double QGraphicsDropShadowEffect_YOffset(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_BlurRadius")]
	public static extern double QGraphicsDropShadowEffect_BlurRadius(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_Color")]
	public static extern void QGraphicsDropShadowEffect_Color(void* c_this);
	[LinkName("QGraphicsDropShadowEffect_SetOffset")]
	public static extern void QGraphicsDropShadowEffect_SetOffset(void* c_this, void* ofs);
	[LinkName("QGraphicsDropShadowEffect_SetOffset2")]
	public static extern void QGraphicsDropShadowEffect_SetOffset2(void* c_this, double dx, double dy);
	[LinkName("QGraphicsDropShadowEffect_SetOffsetWithQreal")]
	public static extern void QGraphicsDropShadowEffect_SetOffsetWithQreal(void* c_this, double d);
	[LinkName("QGraphicsDropShadowEffect_SetXOffset")]
	public static extern void QGraphicsDropShadowEffect_SetXOffset(void* c_this, double dx);
	[LinkName("QGraphicsDropShadowEffect_SetYOffset")]
	public static extern void QGraphicsDropShadowEffect_SetYOffset(void* c_this, double dy);
	[LinkName("QGraphicsDropShadowEffect_SetBlurRadius")]
	public static extern void QGraphicsDropShadowEffect_SetBlurRadius(void* c_this, double blurRadius);
	[LinkName("QGraphicsDropShadowEffect_SetColor")]
	public static extern void QGraphicsDropShadowEffect_SetColor(void* c_this, void* color);
	[LinkName("QGraphicsDropShadowEffect_Connect_OffsetChanged")]
	public static extern void QGraphicsDropShadowEffect_Connect_OffsetChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsDropShadowEffect_Connect_BlurRadiusChanged")]
	public static extern void QGraphicsDropShadowEffect_Connect_BlurRadiusChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsDropShadowEffect_Connect_ColorChanged")]
	public static extern void QGraphicsDropShadowEffect_Connect_ColorChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsDropShadowEffect_Draw")]
	public static extern void QGraphicsDropShadowEffect_Draw(void* c_this, void* painter);
	[LinkName("QGraphicsDropShadowEffect_Tr2")]
	public static extern libqt_string QGraphicsDropShadowEffect_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsDropShadowEffect_Tr3")]
	public static extern libqt_string QGraphicsDropShadowEffect_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsDropShadowEffect_Delete")]
	public static extern void QGraphicsDropShadowEffect_Delete(void* self);
}
public class QGraphicsOpacityEffect
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsOpacityEffect_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsOpacityEffect_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QGraphicsOpacityEffect_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8[] param1)
	{
		return CQt.QGraphicsOpacityEffect_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QGraphicsOpacityEffect_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8[] s)
	{
		return CQt.QGraphicsOpacityEffect_Tr(s);
	}
	
	public double Opacity()
	{
		return CQt.QGraphicsOpacityEffect_Opacity(this.nativePtr);
	}
	
	public void OpacityMask()
	{
		CQt.QGraphicsOpacityEffect_OpacityMask(this.nativePtr);
	}
	
	public void SetOpacity(double opacity)
	{
		CQt.QGraphicsOpacityEffect_SetOpacity(this.nativePtr, opacity);
	}
	
	public void SetOpacityMask(void* mask)
	{
		CQt.QGraphicsOpacityEffect_SetOpacityMask(this.nativePtr, mask);
	}
	
	public virtual void Draw(void* painter)
	{
		CQt.QGraphicsOpacityEffect_Draw(this.nativePtr, painter);
	}
	
	public static libqt_string Tr2(char8[] s, char8[] c)
	{
		return CQt.QGraphicsOpacityEffect_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8[] s, char8[] c, int32 n)
	{
		return CQt.QGraphicsOpacityEffect_Tr3(s, c, n);
	}
	
	public virtual void BoundingRectFor(void* sourceRect)
	{
		CQt.QGraphicsEffect_BoundingRectFor(this.nativePtr, sourceRect);
	}
	
	public void BoundingRect()
	{
		CQt.QGraphicsEffect_BoundingRect(this.nativePtr);
	}
	
	public bool IsEnabled()
	{
		return CQt.QGraphicsEffect_IsEnabled(this.nativePtr);
	}
	
	public void SetEnabled(bool enable)
	{
		CQt.QGraphicsEffect_SetEnabled(this.nativePtr, enable);
	}
	
	public void Update()
	{
		CQt.QGraphicsEffect_Update(this.nativePtr);
	}
	
	public virtual bool Event(void* event)
	{
		return CQt.QObject_Event(this.nativePtr, event);
	}
	
	public virtual bool EventFilter(void* watched, void* event)
	{
		return CQt.QObject_EventFilter(this.nativePtr, watched, event);
	}
	
	public libqt_string ObjectName()
	{
		return CQt.QObject_ObjectName(this.nativePtr);
	}
	
	public void SetObjectName(void name)
	{
		CQt.QObject_SetObjectName(this.nativePtr, name);
	}
	
	public bool IsWidgetType()
	{
		return CQt.QObject_IsWidgetType(this.nativePtr);
	}
	
	public bool IsWindowType()
	{
		return CQt.QObject_IsWindowType(this.nativePtr);
	}
	
	public bool IsQuickItemType()
	{
		return CQt.QObject_IsQuickItemType(this.nativePtr);
	}
	
	public bool SignalsBlocked()
	{
		return CQt.QObject_SignalsBlocked(this.nativePtr);
	}
	
	public bool BlockSignals(bool b)
	{
		return CQt.QObject_BlockSignals(this.nativePtr, b);
	}
	
	public void* Thread()
	{
		return CQt.QObject_Thread(this.nativePtr);
	}
	
	public void MoveToThread(void* thread)
	{
		CQt.QObject_MoveToThread(this.nativePtr, thread);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return CQt.QObject_StartTimer(this.nativePtr, interval);
	}
	
	public void KillTimer(int32 id)
	{
		CQt.QObject_KillTimer(this.nativePtr, id);
	}
	
	public void*[] Children()
	{
		return CQt.QObject_Children(this.nativePtr);
	}
	
	public void SetParent(void* parent)
	{
		CQt.QObject_SetParent(this.nativePtr, parent);
	}
	
	public void InstallEventFilter(void* filterObj)
	{
		CQt.QObject_InstallEventFilter(this.nativePtr, filterObj);
	}
	
	public void RemoveEventFilter(void* obj)
	{
		CQt.QObject_RemoveEventFilter(this.nativePtr, obj);
	}
	
	public static QMetaObject__Connection Connect(void* sender, void* signal, void* receiver, void* method)
	{
		return CQt.QObject_Connect(sender, signal, receiver, method);
	}
	
	public QMetaObject__Connection Connect2(void* sender, char8[] signal, char8[] member)
	{
		return CQt.QObject_Connect2(this.nativePtr, sender, signal, member);
	}
	
	public static bool Disconnect(void* sender, void* signal, void* receiver, void* member)
	{
		return CQt.QObject_Disconnect(sender, signal, receiver, member);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__Connection* param1)
	{
		return CQt.QObject_DisconnectWithQMetaObjectConnection(param1);
	}
	
	public void DumpObjectTree()
	{
		CQt.QObject_DumpObjectTree(this.nativePtr);
	}
	
	public void DumpObjectInfo()
	{
		CQt.QObject_DumpObjectInfo(this.nativePtr);
	}
	
	public bool SetProperty(char8[] name, void* value)
	{
		return CQt.QObject_SetProperty(this.nativePtr, name, value);
	}
	
	public void Property(char8[] name)
	{
		CQt.QObject_Property(this.nativePtr, name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return CQt.QObject_DynamicPropertyNames(this.nativePtr);
	}
	
	public void* BindingStorage()
	{
		return CQt.QObject_BindingStorage(this.nativePtr);
	}
	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public void* Parent()
	{
		return CQt.QObject_Parent(this.nativePtr);
	}
	
	public bool Inherits(char8[] classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsOpacityEffect_new")]
	public static extern void* QGraphicsOpacityEffect_new();
	[LinkName("QGraphicsOpacityEffect_new2")]
	public static extern void* QGraphicsOpacityEffect_new2(void* parent);
	[LinkName("QGraphicsOpacityEffect_MetaObject")]
	public static extern void* QGraphicsOpacityEffect_MetaObject(void* c_this);
	[LinkName("QGraphicsOpacityEffect_Metacast")]
	public static extern void* QGraphicsOpacityEffect_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsOpacityEffect_Metacall")]
	public static extern int32 QGraphicsOpacityEffect_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QGraphicsOpacityEffect_Tr")]
	public static extern libqt_string QGraphicsOpacityEffect_Tr(char8[] s);
	[LinkName("QGraphicsOpacityEffect_Opacity")]
	public static extern double QGraphicsOpacityEffect_Opacity(void* c_this);
	[LinkName("QGraphicsOpacityEffect_OpacityMask")]
	public static extern void QGraphicsOpacityEffect_OpacityMask(void* c_this);
	[LinkName("QGraphicsOpacityEffect_SetOpacity")]
	public static extern void QGraphicsOpacityEffect_SetOpacity(void* c_this, double opacity);
	[LinkName("QGraphicsOpacityEffect_SetOpacityMask")]
	public static extern void QGraphicsOpacityEffect_SetOpacityMask(void* c_this, void* mask);
	[LinkName("QGraphicsOpacityEffect_Connect_OpacityChanged")]
	public static extern void QGraphicsOpacityEffect_Connect_OpacityChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsOpacityEffect_Connect_OpacityMaskChanged")]
	public static extern void QGraphicsOpacityEffect_Connect_OpacityMaskChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsOpacityEffect_Draw")]
	public static extern void QGraphicsOpacityEffect_Draw(void* c_this, void* painter);
	[LinkName("QGraphicsOpacityEffect_Tr2")]
	public static extern libqt_string QGraphicsOpacityEffect_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsOpacityEffect_Tr3")]
	public static extern libqt_string QGraphicsOpacityEffect_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsOpacityEffect_Delete")]
	public static extern void QGraphicsOpacityEffect_Delete(void* self);
}